# home-cluster

./: .env.example  .gitignore  .terraform.lock.hcl  external.tf  hardware.tf  icsi-provisioner.tf  iscsi-provisioner-values.yaml  main.tf  nfs-provisioner-values.yaml  nfs-provisioner.tf  reloader-values.yaml  reloader.tf  renovate.json  upgrade-controller.tf  variables.tf
apps/: apps.tf  convertx.tf  copyparty.tf  cyberchef.tf  docker-compose-immichml.yml  endless-wiki.tf  home-assistant.tf  hwaccel.ml.yml  immich-values.yaml  immich.tf  jellyfin-values.yaml  jellyfin.tf  mealie.tf  mongodb.tf  mqtt.tf  obico.tf  overleaf.tf  penpot.tf  pihole-values.yaml  pihole.tf  planka.tf  postgresql.tf  redis.tf  renovate.tf  sha2.py  siyuan.tf  stirling-pdf.tf  syncthing.tf  unifi.tf  variables.tf
apps/values/: convertx-values.yaml  copyparty-values.yaml  cyberchef-values.yaml  endless-wiki-values.yaml  home-assistant-values.yaml  immich-values.yaml  jellyfin-values.yaml  jellyseer-values.yaml  mealie-values.yaml  mongodb-operator-values.yaml  mongodb-values.yaml  obico-values.yaml  overleaf-values.yaml  penpot-values.yaml  planka-values.yaml  postgres-values.yaml  redis-values.yaml  renovate-values.yaml  siyuan-values.yaml  stirling-pdf-values.yaml  syncthing-values.yaml  unifi-values.yaml  vernemq-values.yaml  z2m-values.yaml
hardware/: hardware.tf  intel-values.yaml  nfd-values.yaml
monitoring/: get_crds.sh  grafana-values.yaml  melodic-sky-values.yaml  misty-show-values.yaml  monitoring.tf  pi5-monitor-values.yaml  prometheus-crds.yaml  prometheus-values.yaml  talented-stew-values.yaml  variables.tf  wonderful-kudu-values.yaml
networking/: cert-manager.tf  cilium-values.yaml  cilium.tf  ddns-values.yaml  ddns.tf  external-dns-values.yaml  ingress-nginx-values.yaml  ingress.tf  metallb-values.yaml  networking.tf  variables.tf
self-built/charts/convertx/: docker-compose.yaml
self-built/charts/csi-iscsi-provisioner/: Chart.yaml  values.yaml  (+1 more)
self-built/charts/postgres-operator/postgres-operator/: Cargo.toml  Dockerfile  build.sh
self-built/charts/postgres-operator/postgres-operator/src/: main.rs
self-built/charts/postgres-operator/postgres-operator/src/crds/: mod.rs  postgresdatabase.rs  postgresuser.rs
self-built/charts/postgres-operator/postgres-operator/src/operator/: db.rs  db_stream.rs  mod.rs  secret_stream.rs  user.rs  user_stream.rs
self-built/images/: postgres.Dockerfile
self-built/images/iscsi-provisioner/iscsi-provisioner-client/: Cargo.toml
self-built/images/iscsi-provisioner/iscsi-provisioner-client/src/: main.rs
self-built/images/iscsi-provisioner/iscsi-provisioner-server/: Cargo.toml  Dockerfile
self-built/images/iscsi-provisioner/iscsi-provisioner-server/src/: iscsi.rs  main.rs  models.rs
self-built/images/iscsi-provisioner/iscsi-provisioner-server/src/v1/: mod.rs
self-built/images/zfs-iscsi-server/: Cargo.toml  build.rs
self-built/images/zfs-iscsi-server/proto/: zfs.proto
self-built/images/zfs-iscsi-server/src/: main.rs
storage/: icsi-provisioner.tf  iscsi-provisioner-values.yaml  storage.tf  variables.tf
(+135 files in other folders)
