[package]
name = "postgres-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "1.0", default-features = true, features = [
  "derive",
  "runtime",
] }
k8s-openapi = { version = "0.26", default-features = false, features = [
  "v1_30",
  "schemars",
] }
futures = "0.3"

serde = "1"
serde_json = "1.0"
schemars = "=0.8.22"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2.8", features = [
  "with-serde_json-1",
  "derive",
  "array-impls",
] }
anyhow = "1.0.95"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
base64 = "0.22.1"
postgres-protocol = "0.6.7"
